manifests/cryptpad.yaml
# Source: cryptpad/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cryptpad
  labels:
    helm.sh/chart: cryptpad-0.0.20
    app.kubernetes.io/name: cryptpad
    app.kubernetes.io/instance: cryptpad
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  - port: 83
    targetPort: ws
    protocol: TCP
    name: ws
  sessionAffinity: ClientIP
  selector:
    app.kubernetes.io/name: cryptpad
    app.kubernetes.io/instance: cryptpad
---
# Source: cryptpad/templates/cryptpad.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cryptpad
  labels:
    helm.sh/chart: cryptpad-0.0.20
    app.kubernetes.io/name: cryptpad
    app.kubernetes.io/instance: cryptpad
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: cryptpad
      app.kubernetes.io/instance: cryptpad
  template:
    metadata:
      annotations:
        checksum/configmap: b48fcf297555b0deb86ac68f2f888d84bfd9172583df31321841f76085af955b
      labels:
        app.kubernetes.io/name: cryptpad
        app.kubernetes.io/instance: cryptpad
    spec:
      serviceAccountName: cryptpad
      securityContext:
        fsGroup: 4001
      containers:
      - name: cryptpad
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: false
          runAsGroup: 4001
          runAsNonRoot: true
          runAsUser: 4001
          seLinuxOptions:
          seccompProfile:
            type: RuntimeDefault
        image: 
          registry.opencode.de/bmi/opendesk/components/supplier/xwiki/images-mirror/cryptpad:opendesk-20241022@sha256:3e5bf06cb9d0a7ec8257874b8b347599200eb677fc428a2e043ccab06ef2be17
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP
        - name: ws
          containerPort: 3003
          protocol: TCP
        startupProbe:
          tcpSocket:
            port: 3000
          initialDelaySeconds: 0
          timeoutSeconds: 1
          periodSeconds: 10
          failureThreshold: 5
          successThreshold: 1
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 0
          timeoutSeconds: 1
          periodSeconds: 10
          failureThreshold: 5
          successThreshold: 1
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 0
          timeoutSeconds: 1
          periodSeconds: 10
          failureThreshold: 5
          successThreshold: 1
        resources:
          limits:
            cpu: 99
            memory: 2Gi
          requests:
            cpu: 0.1
            memory: 512Mi
        volumeMounts:
        - name: cryptpad-blob
          mountPath: /cryptpad/blob
        - name: cryptpad-block
          mountPath: /cryptpad/block
        - name: cryptpad-data
          mountPath: /cryptpad/data
        - name: cryptpad-datastore
          mountPath: /cryptpad/datastore
        - name: configmaps
          mountPath: /cryptpad/config/config.js
          subPath: config.js
        - name: configmaps
          mountPath: /cryptpad/customize/application_config.js
          subPath: application_config.js
      volumes:
      - name: configmaps
        configMap:
          name: cryptpad
      - name: cryptpad-blob
        emptyDir: {}
      - name: cryptpad-block
        emptyDir: {}
      - name: cryptpad-data
        emptyDir: {}
      - name: cryptpad-datastore
        emptyDir: {}
---
# Source: cryptpad/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cryptpad
  labels:
    helm.sh/chart: cryptpad-0.0.20
    app.kubernetes.io/name: cryptpad
    app.kubernetes.io/instance: cryptpad
    app.kubernetes.io/managed-by: Helm
  annotations:
    nginx.org/websocket-services: cryptpad
spec:
  tls:
  - hosts:
    - pad.opendesk.apps.digilab.network
    secretName: opendesk-certificates-tls
  rules:
  - host: pad.opendesk.apps.digilab.network
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: cryptpad
            port:
              number: 80
      - path: /cryptpad_websocket
        pathType: ImplementationSpecific
        backend:
          service:
            name: cryptpad
            port:
              number: 83
